2003-02-03  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): removed empty data directory as requested
	by CRAN maintainers.  Changed version number and date.

2002-10-23  Douglas Bates  <bates@stat.wisc.edu>

	* src/laindex.h: Applied patches from Brian Ripley for compilation
	under Windows.

	* Added configure.win and src/Makevars.win as requested by Brian
	Ripley.

2002-05-03  Douglas Bates  <bates@stat.wisc.edu>

	* src/lamatrix.h: Removing pre-1.2.0 compatibility code per Kurt
	Hornik.

2002-04-24  Douglas Bates  <bates@stat.wisc.edu>

	* configure.ac: Replaced configure.in with configure.ac
	contributed by Kurt Hornik.

	* aclocal.m4 (ac_clean_files): Replaced this with Kurt Hornik's
	version for R-1.5.0
	

2001-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* man/eigen.Rd: Removed the .Alias in the example