@@ -1,41 +1,42 @@
-det.default <- function (x, method = c("qr", "eigenvalues"), ...)
-{
-    ## old version - in case anyone depends on it
-    if (!is.matrix(x) || (n <- ncol(x)) != nrow(x))
-        stop("x must be a square matrix")
-    method <- match.arg(method)
-    if (method == "qr") {
-        x <- prod(diag(qr(x)$qr))
-        if (n%%2 == 1)
-            x
-        else -x
-    }
-    else Re(prod(eigen(x, only.values = TRUE)$values))
-}
+#det.default <- function (x, method = c("qr", "eigenvalues"), ...)
+#{
+#    ## old version - in case anyone depends on it
+#    if (!is.matrix(x) || (n <- ncol(x)) != nrow(x))
+#        stop("x must be a square matrix")
+#    method <- match.arg(method)
+#    if (method == "qr") {
+#        x <- prod(diag(qr(x)$qr))
+#        if (n%%2 == 1)
+#            x
+#        else -x
+#    }
+#    else Re(prod(eigen(x, only.values = TRUE)$values))
+#}
 
-det.Matrix <- function(x, logarithm = TRUE, ...)
+
+determinant.Matrix <- function(x, logarithm = TRUE, ...)
 {
     .Call("R_LapackPP_det", x, as.logical(logarithm), PACKAGE="Matrix")
 }
 
-det.UnitLowerTriangular <- function(x, logarithm = TRUE, ...)
+determinant.UnitLowerTriangular <- function(x, logarithm = TRUE, ...)
 {
     logarithm <- as.logical(logarithm[1])
     asObject(list(modulus =
                  structure(ifelse(logarithm, 0., 1.), logarithm = logarithm),
                  sign = 1),
             call = match.call(),
-            c("det.UnitLowerTriangular", "det"))
+            c("determinant.UnitLowerTriangular", "determinant"))
 }
 
-det.UnitUpperTriangular <- function(x, logarithm = TRUE, ...)
+determinant.UnitUpperTriangular <- function(x, logarithm = TRUE, ...)
 {
     logarithm <- as.logical(logarithm[1])
     asObject(list(modulus =
                  structure(ifelse(logarithm, 0., 1.), logarithm = logarithm),
                  sign = 1),
             call = match.call(),
-            c("det.UnitUpperTriangular", "det"))
+            c("determinant.UnitUpperTriangular", "determinant"))
 }
 
 ## calculate the determinant of a triangular matrix from its diagonal
@@ -46,11 +47,11 @@ diagDet <- function(x, logarithm = TRUE, ...)
                  structure(if (logarithm) sum(log(abs(x))) else prod(abs(x)),
                            logarithm = logarithm),
                  sign = prod(sign(x))),
-            "det")
+            "determinant")
 }
 
-det.LowerTriangular <- function(x, logarithm = TRUE, ...)
-    asObject(diagDet(x, logarithm), c("det.LowerTriangular", "det"))
+determinant.LowerTriangular <- function(x, logarithm = TRUE, ...)
+    asObject(diagDet(x, logarithm), c("determinant.LowerTriangular", "determinant"))
 
-det.UpperTriangular <- function(x, logarithm = TRUE, ...)
-    asObject(diagDet(x, logarithm), c("det.UpperTriangular", "det"))
+determinant.UpperTriangular <- function(x, logarithm = TRUE, ...)
+    asObject(diagDet(x, logarithm), c("determinant.UpperTriangular", "determinant"))
